--- a/PHP-angular/src/app/container/contact/contact.component.html
+++ b/PHP-angular/src/app/container/contact/contact.component.html
@@ -22,7 +22,9 @@
             <textarea class="form-control mb-3" aria-required="true" placeholder="Leave a comment here*"
                 id="userComment" name="ucomment" style="height: 100px" ngModel></textarea>
 
-            <button type="submit" class="btn btn-primary" id="save_btn">Submit</button>
+            <div class="submit-btn">
+                <button type="submit" class="btn btn-primary" id="save_btn">Submit</button>
+            </div>
         </form>
     </div>
 </div>
