--- a/PHP-angular/src/app/container/login/login.component.css
+++ b/PHP-angular/src/app/container/login/login.component.css
@@ -1,5 +1,5 @@
 .login-main {
-    background-image: url(./../../../../assets/images/login-background.jpg);
+    background-image: url(./../../../assets/images/login-background.jpg);
 }
 
 .main {
