--- a/PHP-angular/src/app/container/login/login.component.html
+++ b/PHP-angular/src/app/container/login/login.component.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="forgot pb-4">
-                    <a href="">Forgot password?</a>
+                    <a routerLink="/login/forgot-password">Forgot password?</a>
                 </div>
 
                 <div class="login-btn">
