chnage password working fine

--- a/PHP-angular/src/app/container/changepassword/changepassword.component.html
+++ b/PHP-angular/src/app/container/changepassword/changepassword.component.html
@@ -18,7 +18,7 @@
                 <div *ngIf="show_error" class="mb-3 error-message">{{errormsg}}</div>
 
                 <button type="submit" class="btn btn-primary" id="save_btn"
-                    (click)="checkpassword(resetpassword.value);changed();">Change Password</button>
+                    (click)="checkpassword(resetpassword.value)">Change Password</button>
             </form>
         </div>
 
