--- a/PHP-angular/src/app/container/header/header.component.html
+++ b/PHP-angular/src/app/container/header/header.component.html
@@ -5,6 +5,7 @@
 
     <div class="menu">
         <button routerLink="/home">HOME</button>
+        <button routerLink="/home">HOME</button>
         <button routerLink="/about">ABOUT</button>
         <button routerLink="/blogs">BLOGS</button>
         <button routerLink="/contact">CONTACT</button>
