--- a/PHP-angular/src/app/container/home/home.component.html
+++ b/PHP-angular/src/app/container/home/home.component.html
@@ -1,103 +1,1 @@
-<div class="container">
-    <div class="all_cards">
-        <div>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Website</th>
-                        <th scope="col">Gender</th>
-                        <th scope="col">Comment</th>
-                        <th scope="col">Edit</th>
-                        <th scope="col">Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="load-table-data">
-                    <ng-container class="card" *ngFor="let user of users,let Sno = index">
-                        <tr>
-                            <th scope="row"> {{Sno + 1}} </th>
-                            <td>{{user.fname}}</td>
-                            <td>{{user.email}}</td>
-                            <td>{{user.website}}</td>
-                            <td>{{user.gender}}</td>
-                            <td>{{user.comment}}</td>
-
-                            <td>
-                                <button (click)="showDialog();" class="btn btn-success">Edit</button>
-                                <p-dialog header="Header" [(visible)]="visible" [modal]="true"
-                                    [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
-
-                                    <ng-template pTemplate="header">
-                                        <div class="inline-flex align-items-center justify-content-center gap-2">
-                                            <span class="font-bold white-space-nowrap">Edit User</span>
-                                        </div>
-                                    </ng-template>
-
-                                    <form action="" method="post" id="edit_emp_Comment" #editform="ngForm">
-                                        <div class="edit_form_input">
-
-                                            <input type="text" class="form-control" id="editid" name="editid" hidden=""
-                                                value="{{user.emp_id}}" ngModel>
-
-                                            <div class="form-floating mb-3">
-                                                <input type="text" class="form-control" id="editname"
-                                                    placeholder="First Name" name="editname" ngModel>
-                                                <label for="editName">First Name</label>
-                                            </div>
-
-                                            <div class="form-floating mb-3">
-                                                <input type="email" class="form-control" id="editemail"
-                                                    placeholder="name@example.com" name="editemail" ngModel>
-                                                <label for="editEmail">Email address</label>
-                                            </div>
-
-                                            <div class="form-floating mb-3">
-                                                <input type="text" class="form-control" id="editwebsite"
-                                                    placeholder="Website" name="editwebsite" ngModel>
-                                                <label for="editWebsite">Website</label>
-                                            </div>
-
-                                            <div>
-                                                <select class="form-select mb-3 edit-gender"
-                                                    aria-label="Default select example" id="editgender"
-                                                    name="editgender" ngModel>
-                                                    <option value="Male">Male</option>
-                                                    <option value="Female">Female</option>
-                                                    <option value="Other">Other</option>
-                                                </select>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-floating mb-3">
-                                            <textarea class="form-control" placeholder="Leave a comment here"
-                                                id="editcomment" style="height: 100px" name="editcomment"
-                                                ngModel></textarea>
-                                            <label for="editComment">Comments</label>
-                                        </div>
-
-                                        <button (click)="visible = false" pAutoFocus [autofocus]="true"
-                                            class="btn btn-secondary mx-2">Close</button>
-
-                                        <button pAutoFocus [autofocus]="true" class="btn btn-success" type="submit
-                                            " (click)="updateuser(editform.value)">Save Change</button>
-                                    </form>
-
-                                </p-dialog>
-                            </td>
-
-                            <td>
-                                <Button class="btn btn-danger delete-btn"
-                                    (click)="deleteRecord(user.emp_id)">Delete</Button>
-                            </td>
-                        </tr>
-                    </ng-container>
-
-                </tbody>
-            </table>
-
-
-        </div>
-    </div>
-</div>
+<p>user home</p>
