--- a/PHP-angular/src/app/container/home/home.component.html
+++ b/PHP-angular/src/app/container/home/home.component.html
@@ -1,1 +1,23 @@
-<p>user home</p>
+<div class="container">
+    <div class="all_cards">
+        <div class="minip">
+            <div class="mg">
+                <div class="clr"></div>
+                <div class="group">
+                    <span>membergroup</span>
+                </div>
+            </div>
+            <div class="av" style="background-image: url('https://pbs.twimg.com/media/DjfSp1BVAAAiEyV.jpg');"></div>
+            <div class="info">
+                <h1>jinkyu do</h1>
+                <p>
+                    369 › he/him<br>
+                    soccer player
+                </p>
+            </div>
+            <a class="plot" title="plot with jinkyu" href="/">
+                view plots →
+            </a>
+        </div>
+    </div>
+</div>
