--- a/PHP-angular/src/app/container/blog/blog.component.css
+++ b/PHP-angular/src/app/container/blog/blog.component.css
@@ -1,29 +1,95 @@
-button {
-    color: black;
+.about {
+    text-align: center;
 }
 
-.edit_form_input {
-    width: 100%;
+.about-content {
+    overflow: hidden;
+}
+
+.slideshow {
+    border: none;
+    padding: 3rem 0px;
+}
+
+:host ::ng-deep .p-carousel-items-container {
     display: flex;
+    flex-direction: row;
     gap: 5px;
-    flex-wrap: wrap;
-    justify-content: space-between;
+}
+
+:host ::ng-deep .p-carousel-item {
+    background-color: #e4d3df;
+}
+
+.card {
+    border: none;
+    background-color: transparent;
+}
+
+.slideshow .slide_btn {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    border: 1px solid #4b3049;
+    border-radius: 50px;
+    width: 50px;
+    height: 43px;
+    font-size: 14px;
+    outline: none;
+    background-color: transparent;
+    color: #4b3049;
+    cursor: pointer;
+    margin: 10px;
 }
 
-.edit_form_input>div {
-    width: calc(90% / 2);
+.slideshow .slide_btn:hover {
+    color: #fff;
+    background-color: #4b3049;
 }
 
-.edit-gender {
-    width: 100%;
-    padding: 1rem 0.75rem;
+.slideshow .carousal {
+    text-align: center;
 }
 
-.modal-footer {
-    gap: 10px;
+.slideshow .carousal .slide_image {
+    position: relative;
+    font-size: 20px;
+    margin-bottom: 50px;
 }
 
-.modal-footer>button {
-    padding: 5px;
+.slideshow .carousal .slide_image::after {
+    content: '';
+    z-index: -5;
+    height: 50px;
+    width: 50px;
+    font-size: 50px;
+    position: absolute;
+    top: -15px;
+    left: 47.5%;
+    border-radius: 50px;
+    background-color: #e4d3df;
+}
+
+.slideshow .carousal p {
+    font-size: 20px;
+    line-height: 1.3;
+    padding-bottom: 40px;
+    margin-inline: 50px;
+}
+
+.slideshow .carousal h5 {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.usercomment {
+    font-size: 25px;
+}
+
+.username {
+    font-size: 20px;
+}
+
+.usericon {
+    font-size: 20px;
 }
