--- a/PHP-angular/src/app/container/container.component.html
+++ b/PHP-angular/src/app/container/container.component.html
@@ -4,6 +4,7 @@
             <div class="col-lg-12">
                 <div class="content">
                     <app-header></app-header>
+                    <!-- <app-login></app-login> -->
                 </div>
             </div>
         </div>
